<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.deselmo.android.tambourine.TambourineActivity">

    <item
        android:id="@+id/action_start_record"
        android:title="@string/action_start_record"
        android:icon="@drawable/ic_mic_none"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_stop_record"
        android:title="@string/action_start_record"
        android:icon="@drawable/ic_mic"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_play"
        android:title="@string/action_play"
        android:icon="@drawable/ic_queue_music"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom" />

</menu>
